--- a/index.scss
+++ b/index.scss
@@ -1,8 +1,9 @@
 body {
     background-image: url('./background.jpg');
+    background-position: center center;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
 }
 
 
